Add .gitignore; (fix) css links

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://kevingimbel.com/"
+baseurl = "http://hugo.kevingimbel.de/"
 languageCode = "en-us"
 title = "Kevin Gimbel | Developer"
 theme = "kevingimbel"
