--- a/themes/kevingimbel/package.json
+++ b/themes/kevingimbel/package.json
@@ -7,6 +7,7 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.0.2",
     "gulp-rename": "^1.2.2",
+    "gulp-rollup": "^2.5.1",
     "gulp-sass": "^2.0.4",
     "gulp-uglify": "^1.4.1"
   }
