--- a/themes/kevingimbel/layouts/.htaccess
+++ b/themes/kevingimbel/layouts/.htaccess
@@ -2,6 +2,11 @@ ErrorDocument 404 /404.html
 
 <IfModule mod_rewrite.c>
   RewriteEngine On
+	RewriteBase /
+
+	# Rewrite alternative domain (kevingimbel.de) to kevingimbel.com 
+	RewriteCond %{HTTP_HOST} !kevingimbel.com$ [NC]
+	RewriteRule ^(.*)$ https://kevingimbel.com/$1 [L,R=301]
 
   # Rewrite www to non-www
   RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
