--- a/config.yaml
+++ b/config.yaml
@@ -16,8 +16,23 @@ menu:
   main:
     - Name: "Home"
       URL: "/"
-      Weight: 10
-      Identifier: "home"
+      Weight: 1
+      
+    - Name: "Posts"
+      URL: "/archive/"
+      Weight: 100
+
+    - Name: "Projects"
+      URL: "/projects/"
+      Weight: 200
+
+    - Name: "About"
+      URL: "/about/"
+      Weight: 300
+
+    - Name: "Now"
+      URL: "/now/"
+      Weight: 1100
 
 # Set permalinks, they can be content-type based!
 # Reference: http://gohugo.io/extras/permalinks/
