netlify: Add base URL to build command

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "public"
-  command = "hugo"
+  command = "hugo -b=\"https://www.kevingimbel.com\""
 
 [context.production.environment]
   HUGO_VERSION = "0.25.1"
