config: Remove old baseURL; Add correct netlify link

--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://oceanographer-class-44442.netlify.com"
+baseURL: "https://www.kevingimbel.com"
 languageCode: "en-us"
 theme: "next"
 title: "Kevin Gimbel — Developer"
@@ -53,4 +53,4 @@ params:
       </script>
     copyright: "Content &copy; 2013 - present by <a href=\"https://kevingimbel.com/about\">Kevin Gimbel</a>"
     description: |
-      <small>This website is build with <a href="https://gohugo.io/" title="Learn more about Hugo, a static site generator">Hugo</a>, the source code is hosted on <a href="https://github.com/kevingimbel/kevingimbel.com" title="View the source code of this website">GitHub</a>. Hosted on <a href="netlify.com">Netlify</a>. <a href="/imprint/" title="Legal information">Imprint</a></small>
+      <small>This website is build with <a href="https://gohugo.io/" title="Learn more about Hugo, a static site generator">Hugo</a>, the source code is hosted on <a href="https://github.com/kevingimbel/kevingimbel.com" title="View the source code of this website">GitHub</a>. Hosted on <a href="https://www.netlify.com/">Netlify</a>. <a href="/imprint/" title="Legal information">Imprint</a></small>
